syntax = "proto3";
package actor;
option csharp_namespace = "Proto";

message PID {
    string Address = 1;
    string Id = 2;
    uint32 request_id = 3;
}

message PoisonPill {
}

message DeadLetterResponse {
    PID Target = 1;
}

message Watch {
    PID Watcher = 1;
}

message Unwatch {
    PID Watcher = 1;
}

message Terminated {
    PID who = 1;
    TerminatedReason Why = 2;
}

enum TerminatedReason {
   Stopped = 0;
   AddressTerminated = 1;
   NotFound = 2;
}

message Stop {
}

message Touch {
}

message Touched {
  PID who = 1;
}